src/tests/testfiles/function-calls/parameter-type-1.txt
Error at 6:5: Arguments to function 'f' don't match: float rvalue vs int
f(0.0);
  ^
